# MemoryCleaner

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
legacy/: main.py  run.py
legacy/core/: analyzer.py  memory.py  processes.py
legacy/ui/: app.py  memory_bar.py  process_table.py
server/: backend.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: commands.rs  history.rs  lib.rs  main.rs  settings.rs  startup.rs
src/components/: AboutDialog.tsx  ConfirmDialog.tsx  DiskCleanupDialog.tsx  HistoryPanel.tsx  InsightsPanel.tsx  MemoryGauge.tsx  MemoryGraph.tsx  NotificationCenter.tsx  OnboardingTour.tsx  ProcessDetailModal.tsx  ProcessTable.tsx  ResultDialog.tsx  SettingsModal.tsx  StartupPanel.tsx  ThresholdStepper.tsx  ToastContainer.tsx  UpdateBanner.tsx
src/lib/: api.ts  format.ts  i18n.ts  toast.ts  types.ts
