[package]
name = "mem-tool"
version = "1.0.0"
description = "Memory Cleaner — smart process memory manager"
authors = ["mem-tool"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "mem_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-single-instance = "2.0"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["time"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_ProcessStatus",
    "Win32_Foundation",
    "Win32_System_Threading",
] }
winreg = "0.52"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
